# quinoa-tpl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docker/: alpine  debian
